<resources>
    <string name="app_name">Training</string>

    <string name="bottom_bar_tab_user">User</string>
    <string name="bottom_bar_tab_publications">Publications</string>
    <string name="bottom_bar_tab_pagination">Pagination</string>
    <string name="bottom_bar_tab_view_pager">Other</string>

    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_log_in">Log In</string>
    <string name="dialog_button_start_scheduler">Start scheduler</string>
    <string name="dialog_logout_ok">Logout</string>

    <string name="error">Error…</string>
    <string name="error.no_network">Network error. Please check your connection</string>
    <string name="error.http_error">Network error: %1$s</string>
    <string name="error.unknown">Error: %1$s</string>

    <string name="navigation_error_unknown_screen">Экран не найден</string>

    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>

    <string name="user_absence_name">Absence name</string>
    <string name="user_absence_username">Absence username</string>
    <string name="user_absence_url">Absence URL</string>
    <string name="user_error_response">No user profile yet</string>

    <string name="publications_error_response">Do not have any publications yet</string>

    <string name="pagination_tap_to_reload">Tap to reload</string>
    <string name="pagination_error_loading">What went wrong</string>
    <string name="pagination_error_response">Do not have any films yet</string>

    <string name="other_navigate_to_scheduler">Scheduler</string>
    <string name="other_navigate_to_database">Database</string>
    <string name="other_navigate_to_database_list">Database list</string>
    <string name="other_navigate_to_database_live_data">Database Live Data</string>
    <string name="other_navigate_to_images">Images</string>

    <string name="database_button_save">Save</string>
    <string name="database_button_update">Update</string>
    <string name="database_button_delete">Delete</string>
    <string name="database_button_search">Search</string>
    <string name="database_username">Username</string>
    <string name="database_old_username">Old username</string>
    <string name="database_new_username">New username</string>
    <string name="database_city">City</string>
    <string name="database_message_user">User </string>
    <string name="database_message_save"> was successfully added!</string>
    <string name="database_message_update"> was successfully updated!</string>
    <string name="database_message_delete"> was successfully deleted!</string>
    <string name="database_message_search"> was successfully found!</string>

    <string name="database_list_error_response">Do not have any users yet</string>

    <string name="images_button_save">Save images to storage</string>
    <string name="images_select_from_gallery">Select photo from gallery</string>
    <string name="images_select_from_camera">Capture photo from camera</string>
    <string name="images_cancel">Cancel</string>
    <string name="images_dialog_title">Select Action</string>
    <string name="images_gallery_choose_title">Select File</string>
    <string name="images_remove">Remove</string>

    <string name="image_change_hint">Enter text here</string>
    <string name="image_change_button_add_text">Add text</string>
</resources>